<resources>
    <string name="app_name">Voltage Drop Calculator</string>
    <string name="metric_length_text">Length (m)</string>
    <string name="length_prompt">Enter length of cable run</string>
    <string name="amps">Current (Amps)</string>
    <string name="voltage">Voltage</string>
    <string name="voltage_prompt">Enter system voltage</string>
    <string name="cable_selection">Cable selection</string>
    <string name="cable_selection_prompt">Choose cable</string>
    <string name="watts">Watts</string>
    <string name="voltage_drop">Voltage drop</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="current_draw_prompt">Enter maximum current draw</string>
    <string name="settings">Settings</string>
    <string name="default_voltage_drop_percent">0%</string>
    <string name="default_voltage_drop">0.00</string>
    <string name="_0">0</string>
    <string name="prompt_select_units">Select units of measurement</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="save_settings">Save Settings</string>
    <string name="cancel">Cancel</string>
    <string name="imperial_length_text">Length (ft)</string>
    <string name="back">Back</string>
    <string-array name="metric_cable_sizes">
        <item>120mm²</item>
        <item>95mm²</item>
        <item>70mm²</item>
        <item>50mm²</item>
        <item>35mm²</item>
        <item>25mm²</item>
        <item>16mm²</item>
        <item>10mm²</item>
        <item>6mm²</item>
        <item>4mm²</item>
        <item>2.5mm²</item>
        <item>1.5mm²</item>
        <item>1mm²</item>
        <item>0.75mm²</item>
        <item>0.5mm²</item>
    </string-array>
    <string-array name="imperial_cable_sizes">
        <item>0000AWG</item>
        <item>000AWG</item>
        <item>00AWG</item>
        <item>0AWG</item>
        <item>1AWG</item>
        <item>2AWG</item>
        <item>4AWG</item>
        <item>6AWG</item>
        <item>8AWG</item>
        <item>10AWG</item>
        <item>12AWG</item>
        <item>14AWG</item>
        <item>16AWG</item>
        <item>18AWG</item>
        <item>20AWG</item>
    </string-array>
    <string-array name="imperial_cable_values">
        <item>107.2</item>
        <item>85</item>
        <item>67.4</item>
        <item>53.5</item>
        <item>42.4</item>
        <item>33.6</item>
        <item>21.2</item>
        <item>13.3</item>
        <item>8.4</item>
        <item>5.3</item>
        <item>3.3</item>
        <item>2.1</item>
        <item>1.3</item>
        <item>0.8</item>
        <item>0.5</item>
    </string-array>
</resources>
