<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/length_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/metric_length_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="3"
                android:hint="@string/length_prompt"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/amps"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="3"
                android:hint="@string/current_draw_prompt"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/voltage"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/voltage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="3"
                android:hint="@string/voltage_prompt"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/cable_selection"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/cableSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="3"
                android:hint="@string/cable_selection_prompt" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/watts"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/watts"
                android:text="@string/_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        </TableRow>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="UselessParent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:text="@string/voltage_drop"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/voltage_drop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/default_voltage_drop"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/voltage_drop_percent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:text="@string/default_voltage_drop_percent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


            </TableRow>
        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calculate"
                android:text="@string/calculate"
                tools:ignore="ButtonStyle" />



        </TableRow>
    </TableLayout>


</LinearLayout>