<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <RadioGroup
        android:id="@+id/unitSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/prompt_select_units"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <RadioButton
            android:id="@+id/radio_metric"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/metric" />

        <RadioButton
            android:id="@+id/radio_imperial"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/imperial"/>

    </RadioGroup>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:id="@+id/save_settings_button"
            android:text="@string/save_settings"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:onClick="saveSettings"/>

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="exitToMain"/>
    </TableRow>

</LinearLayout>